# Mod-TW3

./: .gitignore  BUILD_STATUS_SUMMARY.md  CMAKE_FIX_SUMMARY.md  CMakeLists.txt  COMMIT_SUMMARY.md  DEPLOYMENT_GUIDE.md  FULL_TEST_RESULTS.md  GAME_MODES_IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING_IMPLEMENTATION_SUMMARY.md  NETWORK_VALIDATION_SUMMARY.md  README.md  README_LINUX.md  REORGANIZATION_SUMMARY.md  VALIDATION_REPORT.md  check_mod_status.bat  check_tw3.bat  install_linux.sh  install_mod.bat  install_mod.ps1  install_simple.bat  test_install.bat  test_mod_loading.ws  uninstall_mod.bat  witcher3_mp.bat  witcher3_mp.sh
Witcher3-MP-master/Witcher3-MP/: .gitignore  CMakeLists.txt  README.md  VISUAL_STUDIO_SETUP.md  Witcher3-MP.vcxproj
Witcher3-MP-master/Witcher3-MP-Clean/: ANALYZE_LOGS.bat  CMakeLists.txt  COLLECT_LOGS.bat  COMPLETE_VALIDATION_TEST.cpp  DIAGNOSE_PROBLEM.bat  EMERGENCY_INSTALL.bat  INSTALL_BASE_MOD.bat  MOD_DEPENDENCIES.md  README.md  README_FINAL.md  SIMPLE_INSTALL.bat  STEP_BY_STEP.bat  TESTING_GUIDE.md  VALIDATION_REPORT.md  run_complete_test.bat  test_combat_simple.cpp  test_simple.cpp  validate_code.py
Witcher3-MP-master/Witcher3-MP-Clean/config/: nextgen_requirements.json
Witcher3-MP-master/Witcher3-MP-Clean/docs/: API_RESEARCH_REPORT.md  INCOMPLETE_FUNCTIONS_ANALYSIS.md  WITCHERSCRIPT_INTEGRATION_PLAN.md
Witcher3-MP-master/Witcher3-MP-Clean/mod/: build_redkit.bat  install_instructions.md  modInfo.ws
Witcher3-MP-master/Witcher3-MP-Clean/scripts/: research_apis.py
Witcher3-MP-master/Witcher3-MP-new/tests/: CMakeLists.txt
Witcher3-MP-master/Witcher3-MP/config/: config.json
Witcher3-MP-master/Witcher3-MP/docs/: NETWORK_OPTIMIZATION_GUIDE.md  PROJECT_STRUCTURE.md  README_DYNAMIC.md  README_IMPROVED.md  TW3_NEXTGEN_INTEGRATION.md
Witcher3-MP-master/Witcher3-MP/include/game/: CooperativeQuests.h
Witcher3-MP-master/Witcher3-MP/include/integration/: TW3ModInterface.h
Witcher3-MP-master/Witcher3-MP/include/utils/: ConfigManager.h
Witcher3-MP-master/Witcher3-MP/mod/config/: mp_config.json
Witcher3-MP-master/Witcher3-MP/mod/scripts/game/witcher3_mp/: MP_WeaponsDatabase.ws
Witcher3-MP-master/Witcher3-MP/scripts/: build_all.bat  clean.bat  start_nextgen.bat
Witcher3-MP-master/Witcher3-MP/src/core/: LowLatencyMain.cpp
Witcher3-MP-master/Witcher3-MP/src/game/: GlobalEconomy.cpp
Witcher3-MP-master/Witcher3-MP/src/integration/: TW3ModInterface.cpp
Witcher3-MP-master/Witcher3-MP/src/networking/: net_client.cpp  net_message.cpp  net_tsqueue.cpp
Witcher3-MP-master/Witcher3-MP/src/optimization/: NetworkOptimizer.cpp
Witcher3-MP-new/: CMakeLists.txt  README.md
Witcher3-MP-new/docs/: CRITICAL_FUNCTIONS_REPORT.md  FUNCTION_AUDIT_REPORT.md
Witcher3-MP-new/tests/: test_inventory.cpp  test_main.cpp  test_tw3_integration.cpp
Witcher3-MP/docs/: README_LOWLATENCY.md
Witcher3-MP/include/: VersionManager.h
Witcher3-MP/scripts/: build_dynamic.bat  build_lowlatency.bat  build_nextgen.bat  build_nextgen_msbuild.bat  build_nextgen_simple.bat  check_nextgen_requirements.bat
config/: config.json  dynamic_server_config.json  network_config.json  nextgen_server_config.json  nextgen_version_database.json  version.json  version_database.json
docs/: CRITICAL_FUNCTIONS_PRIORITY.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  LOGGING_SYSTEM.md  MOD_ANALYSIS_COMBAT_SYSTEM.md  REDKIT_RESOURCES.md  changelog.md  development.md  game_modes.md  installation.md  network.md  reorganization_summary.md  xml_configuration.md
include/: Common.h  WindowsConfig.h
include/database/: ResourceNames.h
include/game/: SharedProgression.h  SharedStoryMode.h  SyncedMonsterAI.h
include/integration/: LoggerIntegration.h  REDkitBridge.h  TW3ModInterface.h
include/networking/: LANDiscovery.h  MessageTypes.h  NetworkLogger.h  net_message.h  net_server.h
include/optimization/: DataCompression.h  DynamicLowLatencyServer.h  DynamicNetworkOptimizer.h  LowLatencyServer.h  MessagePrioritySystem.h  MovementPrediction.h  NetworkOptimizer.h  SmartBatching.h
include/utils/: ConsoleCommands.h  Logger.h
include/version/: VersionManager.h
mod/: mod.settings  modInfo.ws
mod/config/: filelist.txt  mp_config.json  witcher3_mp_config.xml
scripts/: CMD_INSTALL.bat  DOWNLOAD_AND_INSTALL.bat  FIX_MODS.bat  INSTALL_FOR_GAME.bat  INSTALL_FOR_GAME_DEBUG.bat  INSTALL_TO_TW3.bat  MANUAL_INSTALL.bat  POWERSHELL_INSTALL.bat  SIMPLE_DOWNLOAD.bat  WORKING_INSTALL.bat  build.bat  build_and_test.bat  build_auto.bat  build_minimal.bat  build_simple.bat  build_ultra_simple.bat  build_with_vs.bat  build_working.bat  configure_server.bat  connect_to_server.bat  create_startup_script.bat  demo_logging.bat  install.bat  install_mingw.bat  install_mod.bat  install_visual_studio.bat  launch_game.bat  open_dev_cmd.bat  run_integration_tests.bat  run_tests.bat  setup_complete.bat  setup_logging.bat  test_network.bat  validate_files.py
src/core/: DynamicMain.cpp  Main.cpp  MainSimple.cpp  MainUltraSimple.cpp  NextGenMain.cpp
src/database/: ResourceNames.cpp
src/game/: ExplorationMode.cpp  SharedProgression.cpp
src/integration/: AssetLoader.cpp  LoggerIntegration.cpp  REDkitBridge.cpp  TW3ModInterface.cpp  WitcherScriptBridge.cpp
src/networking/: LANDiscovery.cpp  NetworkLogger.cpp  net_client.cpp  net_connection.cpp  net_server.cpp
src/optimization/: CombatOptimizer.cpp  DataCompression.cpp  DynamicLowLatencyServer.cpp  DynamicNetworkOptimizer.cpp  MessagePrioritySystem.cpp  MessagePrioritySystemImpl.cpp  NetworkOptimizer.cpp  NetworkOptimizerImpl.cpp  PositionInterpolation.cpp  SmartBatching.cpp  SmartBatchingImpl.cpp
src/utils/: ConfigManager.cpp  ConsoleCommands.cpp  Logger.cpp  ModConsoleCommands.cpp
src/version/: DynamicVersionManager.cpp  NextGenVersionManager.cpp  VersionManager.cpp  VersionManagerImpl.cpp
tests/: CMakeLists.txt  test_compression.cpp  test_game_modes.cpp  test_integration_system.cpp  test_logging_system.cpp  test_network_connection.cpp  test_witcherscript.cpp
(+73 files in other folders)
